<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/translucent"
    card_view:cardCornerRadius="0sp"
    card_view:cardElevation="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:contentPadding="10sp"
    android:layout_marginBottom="5sp"
    android:layout_marginStart="5sp"
    android:layout_marginEnd="5sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:columnCount="2"
            android:columnOrderPreserved="true">
            <TextView
                android:id="@+id/salaries_info_or_discount_info"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_rowSpan="3"
                style="@style/StyleDemonstrativeInfo"
                android:text="@string/default_salaries_info"
                android:layout_gravity="end|center_vertical"
                />
            <TextView
                android:id="@+id/description_info"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                style="@style/StyleDemonstrativeInfo"
                android:text="@string/default_description_info"
                />
            <TextView
                android:id="@+id/reference_info"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                style="@style/StyleDemonstrativeInfo"
                android:text="@string/default_reference_info"
                />
        </GridLayout>
        <View
            style="@style/StyleHorizontalLineDivider"
            />
    </LinearLayout>

</android.support.v7.widget.CardView>

