<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen_bank_balance"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:paddingStart="8sp"
    android:paddingEnd="8sp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wrapper_screen_bank_balance"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/StyleVerticalGridLayoutBalanceSalary.BGC">
            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/company_name"
                    style="@style/CellGridLayout.Text.Bold"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/balance_date"
                    style="@style/CellGridLayout.Text.Bold"
                    android:textAlignment="textEnd"
                    />
            </LinearLayout>
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_view_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_user_name"
                    style="@style/CellGridLayout.Text.Bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text_view_user_register"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/default_user_register"
                        style="@style/CellGridLayout.Text.Bold"
                        />
                    <TextView
                        android:id="@+id/text_view_demonstrative_date"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/default_date"
                        style="@style/CellGridLayout.Text.Bold"
                        android:textAlignment="textEnd"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_wrapper_warning_message"
            style="@style/StyleVerticalGridLayoutBalanceSalary.BGC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0sp"
                android:layout_height="30sp"
                android:layout_weight="0.2"
                android:maxHeight="30sp"
                android:maxWidth="10sp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/warning" />
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:text="@string/default_warning_message_salaries"
                android:textStyle="bold"
                />

        </LinearLayout>

        <View
            style="@style/StyleHorizontalLineDivider.BGC"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_label_discounted_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_discounted_value"
                style="@style/TextCell.Label"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/text_view_discounted_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_discounted_value"
                style="@style/TextCell.ImportantValue"
                />
        </LinearLayout>

        <View
            style="@style/StyleHorizontalLineDivider.BGC"
            />

        <!-- Conteúdo sobre os descontos do funcionpario-->

        <!-- fim do conteúdo sobre os descontos -->


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_data_demonstrative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <View
            style="@style/StyleHorizontalLineDivider.BGC"
            />

        <LinearLayout
            android:id="@+id/layout_accumulate_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/default_label_total_salaries"
                    style="@style/TextCell.Label"
                    android:textAlignment="textEnd"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/default_label_total_discounts"
                    style="@style/TextCell.Label"
                    android:textAlignment="textEnd"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_total_salaries"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="textEnd"
                    style="@style/TextCell.ImportantValue"
                    android:text="@string/default_real_formatted_value"
                    />

                <TextView
                    android:id="@+id/text_view_total_discounts"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="textEnd"
                    style="@style/TextCell.ImportantValue"
                    android:text="@string/default_real_formatted_value"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/StyleHorizontalLineDivider.BGC"
            />

        <LinearLayout
            android:id="@+id/layout_discount_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            >
            <!--
            <LinearLayout
                android:id="@+id/header_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    style="@style/CellGridLayout.Title"
                    android:text="@string/default_title_code"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    style="@style/CellGridLayout.Title"
                    android:text="@string/default_title_description"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    style="@style/CellGridLayout.Title"
                    android:text="@string/default_title_reference"
                    />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    style="@style/CellGridLayout.Title"
                    android:text="@string/default_title_salaries"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    style="@style/CellGridLayout.Title"
                    android:text="@string/default_title_discounts"
                    />

            </LinearLayout>
            -->

            <LinearLayout
                android:id="@+id/footer_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/StyleVerticalGridLayoutBalanceSalary.BGC">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_salary_base"
                        />
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_salary_inss"
                        />
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_calc_fgts_base"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wrapper_info_demonstrative_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/salary_base"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:text="@string/default_real_formatted_value"
                        />
                    <TextView
                        android:id="@+id/salary_contrib_inss"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:text="@string/default_real_formatted_value"
                        />
                    <TextView
                        android:id="@+id/base_calc_fgts"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:text="@string/default_real_formatted_value"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_fgts"
                        />
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_base_calc_irff"
                    />
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Title"
                        android:text="@string/default_title_irff_range"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wrapper_info_demonstrative_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/fgts_tax_mouth"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:text="@string/default_real_formatted_value"
                        />
                    <TextView
                        android:id="@+id/calc_irff"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:layout_gravity="center"
                        android:text="@string/default_real_formatted_value"
                        />
                    <TextView
                        android:id="@+id/value_irff"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        style="@style/CellGridLayout.Text"
                        android:text="@string/default_real_formatted_value"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>